<resources>
    <string name="app_name">Places To Go</string>
    <string name="gas_stations">Gas Stations</string>
    <string name="hospitals">Hospitals</string>
    <string name="hotels">Hotels</string>
    <string name="movie_theaters">Movie Theaters</string>
    <string name="coffee">Coffee</string>
    <string name="banks">Banks</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="restaurants">Restaurants</string>
    <string name="supermarkets">Supermarkets</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>